--- a/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
+++ b/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
@@ -16,26 +16,24 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tJu-d1-O5E">
-                                <rect key="frame" x="40" y="149" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HI HOW IS ??" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwd-H7-sDd">
                                 <rect key="frame" x="72" y="74" width="176" height="67"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bIl-6S-7BV">
+                                <rect key="frame" x="56" y="130" width="227" height="204"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kls-tA-VeM">
-                                <rect key="frame" x="136" y="296" width="48" height="30"/>
+                                <rect key="frame" x="136" y="351" width="48" height="30"/>
                                 <state key="normal" title="done (:">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Wm9-VP-JdX" kind="push" id="8lS-Sb-j38"/>
+                                    <segue destination="Wm9-VP-JdX" kind="push" id="BUj-Jm-X7k"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -46,7 +44,7 @@
                     <connections>
                         <outlet property="doneButton" destination="kls-tA-VeM" id="8Df-Qv-fMK"/>
                         <outlet property="journalPrompt" destination="pwd-H7-sDd" id="mWV-oQ-tPu"/>
-                        <outlet property="journalText" destination="tJu-d1-O5E" id="Ebw-IR-zJq"/>
+                        <outlet property="journalText" destination="bIl-6S-7BV" id="Vq1-xY-1Ej"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uwn-2f-HJW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -146,7 +144,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Wm9-VP-JdX" kind="push" id="0uB-Jz-Z1b"/>
+                                    <segue destination="hBM-No-KOm" kind="unwind" unwindAction="unwindToSegue:" id="IbY-zm-1RX"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -155,12 +153,12 @@
                     <tabBarItem key="tabBarItem" title="new blank" id="vDY-NO-JyQ"/>
                     <navigationItem key="navigationItem" id="Nwe-1G-mj7"/>
                     <connections>
-                        <outlet property="doneButton" destination="9Vb-EG-0eY" id="NNU-E2-fXw"/>
                         <outlet property="entryTitle" destination="daZ-s1-M4n" id="N4Z-fP-XrW"/>
                         <outlet property="journalText" destination="lBJ-sl-3Bj" id="qem-Fj-bh5"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mEs-sL-0fG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="hBM-No-KOm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1264" y="187"/>
         </scene>
@@ -277,7 +275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVu-Hw-zBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="889" y="-338"/>
+            <point key="canvasLocation" x="907" y="-522"/>
         </scene>
         <!--mindfulness journal-->
         <scene sceneID="yl2-sM-qoP">
@@ -307,7 +305,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="8lS-Sb-j38"/>
+        <segue reference="N15-Ki-waQ"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.12877170214937528" green="0.1977996269133625" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
