--- a/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
+++ b/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A329r" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A361p" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
@@ -32,9 +32,6 @@
                                 <state key="normal" title="done (:">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <segue destination="Wm9-VP-JdX" kind="push" id="BUj-Jm-X7k"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,12 +46,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Uwn-2f-HJW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1264" y="873"/>
+            <point key="canvasLocation" x="1530" y="853"/>
         </scene>
-        <!--mindfulness journal-->
+        <!--Today's Entries-->
         <scene sceneID="sne-Nx-EWA">
             <objects>
-                <tableViewController id="Wm9-VP-JdX" customClass="EntriesTableViewController" sceneMemberID="viewController">
+                <tableViewController id="Wm9-VP-JdX" customClass="EntriesTableViewController" customModule="mindfulness_journal" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" dataMode="prototypes" style="plain" allowsMultipleSelection="YES" rowHeight="82" sectionHeaderHeight="22" sectionFooterHeight="22" id="mRu-Cd-HyE">
                         <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -91,7 +88,8 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Today's Entries" id="1MF-4U-D2b"/>
-                    <navigationItem key="navigationItem" title="mindfulness journal" id="GXm-9k-A0x">
+                    <navigationItem key="navigationItem" id="GXm-9k-A0x">
+                        <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" title="P" id="NNw-BC-FIc">
                             <connections>
                                 <segue destination="kAY-4Q-UtZ" kind="push" identifier="prompt" id="LPO-i6-3TZ"/>
@@ -109,7 +107,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="26U-rs-jgU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="790" y="351"/>
+            <point key="canvasLocation" x="786" y="358"/>
         </scene>
         <!--new blank-->
         <scene sceneID="zpL-Ed-50b">
@@ -144,7 +142,8 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="hBM-No-KOm" kind="unwind" unwindAction="unwindToSegue:" id="IbY-zm-1RX"/>
+                                    <action selector="doneButtonPressed:" destination="UPM-8d-ygh" eventType="touchUpInside" id="zwX-SM-iAC"/>
+                                    <segue destination="hBM-No-KOm" kind="unwind" unwindAction="unwindToSegue:" id="3dD-aG-9W1"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -160,7 +159,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mEs-sL-0fG" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hBM-No-KOm" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1264" y="187"/>
+            <point key="canvasLocation" x="1530" y="185"/>
         </scene>
         <!--Settings-->
         <scene sceneID="ha2-Lw-kYY">
@@ -204,7 +203,7 @@
         <!--Today's Entries-->
         <scene sceneID="tEz-21-ibx">
             <objects>
-                <navigationController id="bJ2-m3-sKZ" sceneMemberID="viewController">
+                <navigationController id="bJ2-m3-sKZ" customClass="JournalNavigationViewController" customModule="mindfulness_journal" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Today's Entries" id="RCc-hQ-eG4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="9Qa-pz-iF6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -260,11 +259,7 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <items>
                                     <navigationItem title="Title" id="4SL-HB-nWd">
-                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="rdK-XS-WH7">
-                                            <connections>
-                                                <segue destination="Wm9-VP-JdX" kind="push" id="N15-Ki-waQ"/>
-                                            </connections>
-                                        </barButtonItem>
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="rdK-XS-WH7"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -275,7 +270,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eVu-Hw-zBR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="907" y="-522"/>
+            <point key="canvasLocation" x="1530" y="-470"/>
         </scene>
         <!--mindfulness journal-->
         <scene sceneID="yl2-sM-qoP">
@@ -304,8 +299,5 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="N15-Ki-waQ"/>
-    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.12877170214937528" green="0.1977996269133625" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
