--- a/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
+++ b/mindfulness journal/mindfulness journal/Base.lproj/Main.storyboard
@@ -326,10 +326,10 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--View Controller-->
+        <!--Observations View Controller-->
         <scene sceneID="wid-JZ-Wuc">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9IO-BN-uJ0" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="9IO-BN-uJ0" customClass="ObservationsViewController" customModule="mindfulness_journal" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2EO-ap-Wlj"/>
                         <viewControllerLayoutGuide type="bottom" id="4x6-2m-pPt"/>
@@ -338,25 +338,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="506" height="128"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9Ve-A1-xnL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="9Ve-A1-xnL" customClass="ObservationsTableView" customModule="mindfulness_journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="506" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="sk3-Ky-zKS">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="observationCell" id="sk3-Ky-zKS" customClass="ObsViewCell" customModule="mindfulness_journal" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="506" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sk3-Ky-zKS" id="mOf-4x-oOy">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MzW-Qm-Ptv">
-                                                    <rect key="frame" x="24" y="14" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvo-cT-fMH">
+                                                    <rect key="frame" x="30" y="7" width="147" height="30"/>
+                                                    <state key="normal" title="Observation Identifier">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="observationIdentifierTap:" destination="sk3-Ky-zKS" eventType="touchUpInside" id="UWN-Z8-Gyk"/>
+                                                    </connections>
+                                                </button>
                                                 <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kLr-Ev-7b9">
-                                                    <rect key="frame" x="154" y="8" width="118" height="31"/>
+                                                    <rect key="frame" x="252" y="7" width="226" height="31"/>
+                                                    <connections>
+                                                        <action selector="sliderValueChanged:" destination="sk3-Ky-zKS" eventType="valueChanged" id="Hau-Lz-bjg"/>
+                                                    </connections>
                                                 </slider>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="observationButton" destination="Kvo-cT-fMH" id="DTG-UY-3pU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="createNewObservationCell" id="j0J-u9-jOT" customClass="NewObsCell" customModule="mindfulness_journal" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="506" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j0J-u9-jOT" id="0IV-KN-Av6">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xmo-Y5-HrN">
+                                                    <rect key="frame" x="-5" y="7" width="189" height="30"/>
+                                                    <state key="normal" title="New observation">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="NewObsPressed:" destination="j0J-u9-jOT" eventType="touchUpInside" id="nRu-i6-Oj6"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -366,10 +393,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
+                    <connections>
+                        <outlet property="tableView" destination="9Ve-A1-xnL" id="avD-bw-C67"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kV8-tH-CnI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3067" y="698"/>
+            <point key="canvasLocation" x="3067" y="696"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.12877170214937528" green="0.1977996269133625" blue="1" alpha="1" colorSpace="calibratedRGB"/>
